# fastapi-social-login-sqlmodel

./: .env  README.md  pyproject.toml
app/: main.py
app/api/: report.py
app/auth/: __init__.py  libs.py  routes.py
app/core/: config.py
app/models/: base_uuid_model.py  user_model.py
app/schemas/: user_schema.py
